Fix paragraph spacing in Borlabs Cookiebox.

--- a/assets/src/scss/plugins/_borlabs.scss
+++ b/assets/src/scss/plugins/_borlabs.scss
@@ -82,7 +82,7 @@
 }
 
 
-#BorlabsCookieBox ._brlbs-paragraph._brlbs-text-individual-settings {
+#BorlabsCookieBox ._brlbs-paragraph {
     display: block !important;
 }
 
